# ragflow-tyh

tyh-rag-platform/backend/: .env.example  migrate_add_production_doc_id.py  pyproject.toml  requirements.txt
tyh-rag-platform/backend/app/: __init__.py  main.py
tyh-rag-platform/backend/app/adapters/: content_filter.py  ragflow_client.py  ragflow_types.py
tyh-rag-platform/backend/app/core/: config.py  deps.py  security.py
tyh-rag-platform/backend/app/db/: session.py
tyh-rag-platform/backend/app/models/: __init__.py
tyh-rag-platform/backend/app/schemas/: auth.py  chat.py  team.py  user.py
tyh-rag-platform/backend/app/services/: chat_service.py  document_status.py  document_sync_service.py  qa_duplicate_detector.py  sandbox_service.py  team_service.py  transfer_service.py  user_service.py
tyh-rag-platform/backend/app/utils/: audit.py  scheduler.py
tyh-rag-platform/backend/scripts/: create_tables.py  create_test_data.py  init_db.py  migrate_add_document_status.py  migrate_team_binding.py  seed_production.py
tyh-rag-platform/backend/tests/: conftest.py  locustfile.py  test_chat.py  test_documents.py  test_e2e.py  test_feedbacks.py  test_health.py  test_qa.py  test_stats.py  test_tickets.py
tyh-rag-platform/backend/tests/unit/: test_chat_service.py  test_content_filter.py  test_document_status.py  test_document_sync_service.py  test_favorite_toggle.py  test_feedback_rules.py  test_feedback_toggle.py  test_parse_config.py  test_qa_duplicate_detector.py  test_scheduler.py  test_security.py  test_sse_message_id.py  test_transfer_service.py
(+82 files in other folders)
