[project]
name = "knowledge-base-backend"
version = "1.0.0"
description = "AI知识库系统后端 - 基于FastAPI + RAGflow"
requires-python = ">=3.12"
dependencies = [
    # Web框架
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "alembic>=1.12.0",
    # 缓存
    "redis[hiredis]>=5.0.0",
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # HTTP客户端 (RAGflow/DeepSeek)
    "httpx>=0.25.0",
    # 工具
    "python-dotenv>=1.0.0",
    # Excel 生成（正向同步 XLSX）
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
